[package]
name = "engine"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
argh = "0.1.4"
html-minifier = "3.0.8"
image = "0.23.14"
pulldown-cmark = "0.8.0"
regex = "1.4.3"
reqwest = { version = "0.11.1", features = ["blocking"] }
serde = { version = "1.0.123", features = ["derive"] }
sha2 = "0.9.3"
toml = "0.5.8"
url = "2.2.1"
webp = "0.1.1"
