[package]
name = "engine"
version = "0.1.0"
authors = ["anirudhb <anirudhb@users.noreply.github.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
argh = "0.1.4"
futures = "0.3.13"
html-minifier = "3.0.8"
image = "0.23.14"
pulldown-cmark = "0.8.0"
regex = "1.4.3"
serde = { version = "1.0.123", features = ["derive"] }
sha2 = "0.9.3"
surf = "2.2.0"
tokio = { version = "1.3.0", features = ["full"] }
tokio-util = { version = "0.6.4", features = ["compat"] }
toml = "0.5.8"
tracing = "0.1.25"
tracing-subscriber = "0.2.16"
url = "2.2.1"
webp = "0.1.1"
